--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   </style>
 </head>
 <body>
-  <header>📄 Arun's Document Hub</header>
-  <p>Here are my important documents. Click and explore!</p>
+  <header>📄 Arun's Payslips Hub</header>
+  <p>Here are my payslips from June 2024 - June 2025. Click and explore!, You can find the Google Drive links of payslips.</p>
   <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRyM0vV2dhczWL_1rn0P60VM-_J9W5JQKiGw0A6ZvSinCzV4nKCrpzoTqZ89evJa2aK2hgiya45SNpv/pubhtml" allowfullscreen></iframe>
-  <div class="footer">Hosted with ❤️ on GitHub Pages</div>
+  <div class="footer">Hosted with ❤️ on GitHub Pages by Arun Kumar Jangam @ Deccan Fine Chemicals India Pvt. Ltd., Visakhapatnam</div>
 </body>
 </html>
